--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="huihui's vue project"/>
-    <title>Hui-Vue-Base</title>
+    <meta name="description" content="Ubro"/>
+    <title>Ubro</title>
   </head>
   <body>
     <div id="app"></div>
